--- a/package.json
+++ b/package.json
@@ -24,44 +24,34 @@
     ]
   },
   "dependencies": {
-    "@radix-ui/colors": "^0.1.8",
-    "@radix-ui/react-avatar": "^1.0.1",
-    "@radix-ui/react-checkbox": "^1.0.1",
-    "@radix-ui/react-icons": "^1.1.1",
-    "@radix-ui/react-select": "^1.1.2",
-    "@radix-ui/react-tabs": "^1.0.1",
-    "@reduxjs/toolkit": "^1.9.0",
-    "@stitches/react": "^1.2.8",
-    "axios": "^1.1.3",
-    "next": "^13.0.4",
-    "next-themes": "^0.2.1",
+    "@reduxjs/toolkit": "^1.9.1",
+    "axios": "^1.2.2",
+    "next": "^13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-error-boundary": "^3.1.4",
-    "react-icons": "^4.6.0",
-    "react-redux": "^8.0.5",
-    "tinycolor2": "^1.4.2"
+    "react-redux": "^8.0.5"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
-    "@types/jest": "^29.2.3",
-    "@types/node": "^18.11.9",
-    "@types/react": "^18.0.25",
+    "@types/jest": "^29.2.5",
+    "@types/node": "^18.11.18",
+    "@types/react": "^18.0.26",
     "@types/testing-library__jest-dom": "^5.14.5",
-    "@types/tinycolor2": "^1.4.3",
-    "@typescript-eslint/eslint-plugin": "^5.43.0",
-    "@typescript-eslint/parser": "^5.43.0",
-    "eslint": "^8.28.0",
-    "eslint-config-next": "^13.0.4",
-    "eslint-config-prettier": "^8.5.0",
-    "husky": "^8.0.2",
+    "@typescript-eslint/eslint-plugin": "^5.48.0",
+    "@typescript-eslint/parser": "^5.48.0",
+    "eslint": "^8.31.0",
+    "eslint-config-next": "^13.1.1",
+    "eslint-config-prettier": "^8.6.0",
+    "husky": "^8.0.3",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
-    "lint-staged": "^13.0.3",
-    "msw": "^0.49.0",
-    "prettier": "^2.7.1",
+    "lint-staged": "^13.1.0",
+    "msw": "^0.49.2",
+    "prettier": "^2.8.1",
+    "sass": "^1.57.1",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.3"
+    "typescript": "^4.9.4"
   }
 }
