--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@reduxjs/toolkit": "^1.9.1",
     "axios": "^1.2.2",
     "next": "^13.1.1",
+    "open-props": "^1.5.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-error-boundary": "^3.1.4",
