--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     ]
   },
   "dependencies": {
+    "@radix-ui/react-alert-dialog": "^1.0.2",
     "@reduxjs/toolkit": "^1.9.1",
     "axios": "^1.2.2",
     "next": "^13.1.1",
