Introduce vanilla extract

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@reduxjs/toolkit": "^1.9.1",
     "axios": "^1.2.2",
     "next": "^13.1.1",
+    "next-themes": "^0.2.1",
     "open-props": "^1.5.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -43,6 +44,8 @@
     "@types/testing-library__jest-dom": "^5.14.5",
     "@typescript-eslint/eslint-plugin": "^5.48.0",
     "@typescript-eslint/parser": "^5.48.0",
+    "@vanilla-extract/css": "^1.9.2",
+    "@vanilla-extract/next-plugin": "^2.1.1",
     "eslint": "^8.31.0",
     "eslint-config-next": "^13.1.1",
     "eslint-config-prettier": "^8.6.0",
